[package]
name = "hyper-caching-body"
authors = ["AndrianoTurner <danya.shibaev@gmail.com>"]
description = "Caching body type for hyper"
readme = "README.md"
license = "MIT"
keywords = ["hyper","http","cache"]
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
http-body = "1.0.1"
hyper = "1.8.1"
tokio = "1.48.0"

[dev-dependencies]
tokio  = { version = "*", features = ["full"] }
hyper = { version = "*", features = ["full"] }
hyper-util = { version = "*", features = ["full"] }
