[package]
name = "hyper-caching-body"
authors = ["AndrianoTurner <danya.shibaev@gmail.com>"]
homepage = "https://github.com/AndrianoTurner/hyper-caching-body"
description = "Caching body type for hyper"
readme = "README.md"
license = "MIT"
keywords = ["hyper","http","cache"]
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.11.0"
http-body = "1.0.1"
hyper = "1.8.1"
tokio = "1.48.0"

[dev-dependencies]
tokio  = { version = "1.48.0", features = ["full"] }
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.18", features = ["full"] }
